# TP1_SO

./: .bash_history  .gitconfig  .gitignore  CMakeLists.txt  Makefile  README.md  commons.h  md5  md5.c  pipe_manager.c  pipe_manager.h  pipe_manager.h.gch  resultado.txt  shared_memory.h  slave  slave.c  vision  vision.c
files/: 29  33  34  35  36  37  38  39  43  44  47  50  52  55  57  58  59  60  62  63  66  68  71  73  74  75  76  77  79  80  83  84  85  86  87  89  91  93  95  96  (+3 more)
test/: small_file.txt
